# hardware-backend

./: .gitignore  README.md  config.example.json  main.py  pyproject.toml  utils.py
devices/: buzzer.py
sensors/: dht_22.py  pmsa003i.py  scd4x.py
vendors/: pubnub_client.py
