[project]
name = "hardware-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-dht>=4.0.10",
    "environs>=14.5.0",
    "notebook>=7.4.7",
    "pubnub>=10.4.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
